@@ -1,3 +1,11 @@
+Thu Feb 24 23:29:14 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
+	* TAO_IDL/be/be_visitor_operation/operation_ss.cpp:
+
+	  Fixed unused "servant_upcall" argument warning in the case where
+	  interceptor support is disabled.
+
 Thu Feb 24 23:13:36 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/SystemException.h (SystemException):
